finished project router

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "In this challenge, you design and build a Data Model and a RESTful API that stores data into a Relational Database.",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +20,9 @@
   "homepage": "https://github.com/scratchglory/node-db-challenge#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "knex": "^0.21.1",
+    "nodemon": "^2.0.3",
     "sqlite3": "^4.2.0"
   }
 }
